Solved too fast search loading on mobile

--- a/frontend/application/style/1-components/header/header.scss
+++ b/frontend/application/style/1-components/header/header.scss
@@ -55,7 +55,6 @@
 
   .SearchBox {
     width: 480px;
-    min-width: 480px;
     margin: 0 auto;
 
     margin-top: 50px;
