--- a/frontend/application/style/1-components/singleItem/singleItem.scss
+++ b/frontend/application/style/1-components/singleItem/singleItem.scss
@@ -1,7 +1,6 @@
 .SingleItemWrapper {
   width: 960px;
   max-width: 960px;
-  min-width: 480px;
   overflow: hidden;
 
   margin: 0 auto;
